@@ -8,7 +8,7 @@ INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
 IF(JSON_SPIRIT_FOUND)
 	INCLUDE_DIRECTORIES(${JSON_SPIRIT_INCLUDE_DIR})
 	ADD_DEFINITIONS(-DHAVE_JSON_SPIRIT)
-	SET(JSON_LIB json_spirit_static)
+	SET(JSON_LIB json_spirit)
 ELSE(JSON_SPIRIT_FOUND)
 	SET(JSON_LIB)
 ENDIF(JSON_SPIRIT_FOUND)
